add compiled jar

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # build
-/target
+/target/classes
+/target/generated-sources
+/target/scr-plugin-generated
 
 # misc
 .DS_Store
